# learn_opengl

./: .gitignore  readme
cmake/sample2/: CMakeLists.txt  Makefile  hello-triangle-exercise1.cpp  main.cc  main2.cc  schedular.cc
opengl/: .gitignore  3.3.shader.fs  CMakeCache.txt  CMakeLists.txt  Makefile  cmake_install.cmake  filesystem.h  glad.c  main.cc  main2.cc  shader.h  shader.vs  stb_image.cpp  texture.cc  texture.cpp
opengl/dependencies/: filesystem.h
opengl/dependencies/glad/: glad.h
